Attempt to fix Windows-specific layout bug

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -7,6 +7,10 @@ button {
 	margin: 5px;
 }
 
+.buttons {
+	text-align: center;
+}
+
 .stat {
     text-align: center;
     padding-top: 5px;
